2004-08-31  Bruno Haible  <bruno@clisp.org>

	Assume the OS manages the C stack sufficiently well.
	* lispbibl.d (NO_SP_MALLOC): Remove macro.
	* spvw.d (usage): Remove documentation of option -s.
	(struct argv_initparams): Remove argv_stackneed.
	(parse_options): Drop support for option -s.
	(main): Don't reserve space for SP. Don't call setSP.
	* doc/clisp.xml.in: Remove documentation of option -s.
	* doc/_clisp.html: Likewise.

2004-08-31  Bruno Haible  <bruno@clisp.org>

	Remove support for MiNT.
	* lispbibl.d (UNIX_MINT): Remove macro.
	* pathname.d (realpath): Remove MiNT support.
	* stream.d (clear_tty_input): Assume FREAD is defined when TIOCFLUSH is
	defined.
	(clear_tty_output): Assume FWRITE is defined when TIOCFLUSH is defined.

2004-08-30  Bruno Haible  <bruno@clisp.org>

	* spvw.d (program_name): Change type to 'const char *'.
	(usage): Remove quit_sofort() call at the end.
	(init_lowest_level, fini_lowest_level): New functions.
	(struct argv_init_c): New type.
	(struct argv_initparams): New type.
	(struct argv_actions): New type.
	(argv_verbose, argv_wait_keypress, argv_license): Remov variables.
	(parse_options): New function, extracted from main(). Signal an error when an
	invalid option beginning with "-r" is seen.
	(free_argv_initparams, free_argv_actions): New functions.
	(argv1, argv2): New variables.
	(main): Use parse_options.

2004-07-11  Bruno Haible  <bruno@clisp.org>

	* clos.lisp: Set *allow-making-generic* to t while bootstrapping.
	* clos-slotdef3.lisp: No need to use fmakunbound here.
	* clos-specializer3.lisp: Likewise.
	* clos-class6.lisp: No need to bind *allow-making-generic* or use
	fmakunbound here.
	* clos-methcomb4.lisp: No need to bind *allow-making-generic* here.
	* clos-genfun5.lisp: Likewise.
	* clos-print.lisp: No need to use fmakunbound here.

2004-07-11  Bruno Haible  <bruno@clisp.org>

	* clos-genfun2.lisp (|#'allocate-instance|, |#'initialize-instance|)